--- a/app/public/wp-content/themes/mockup/style.css
+++ b/app/public/wp-content/themes/mockup/style.css
@@ -8,10 +8,61 @@ html {
 }
 body {
   margin: 0;
+  font-family: Helvetica;
 }
 .header {
   background-color: #0e1b50;
-  width: 100%;
-  height: 125px;
   color: white;
+  padding: 32.5px 50px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.footer {
+  background-color: #0e1b50;
+  width: 100%;
+  padding: 44px;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  text-align: center;
+  color: white;
+  font-family: Helvetica Neue;
+}
+.single-page {
+  padding: 50px 70px;
+}
+.main-navigation ul {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: flex-end;
+}
+.main-navigation ul li {
+  padding-left: 20px;
+}
+.main-navigation ul li ul {
+  display: none;
+  position: absolute;
+  transform: translateX(-32px);
+  list-style-type: none;
+  margin-top: 10px;
+  background-color: #0e1b50;
+  border: 1px solid white;
+}
+.main-navigation ul li:hover > ul {
+  display: block;
+  transition: 1s all;
+  padding: 25px 24px;
+}
+.main-navigation ul a {
+  color: white;
+  text-decoration: none;
+}
+.menu-parent-item > a:after {
+  content: "\2304";
+  display: inline-block;
+  margin-left: 5px;
+  font-size: 2rem;
 }
